--- a/src/be/ac/ulb/infof307/g06/views/Tags.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/Tags.fxml
@@ -23,14 +23,14 @@
          <children>
             <ColorPicker fx:id="tagsColorPicker" layoutX="452.0" layoutY="57.0" prefHeight="25.0" prefWidth="96.0" />
             <TextField fx:id="defaultTagNameTextField" layoutX="50.0" layoutY="57.0" prefHeight="25.0" prefWidth="381.0" promptText="Default tag's name" />
-            <Button layoutX="574.0" layoutY="57.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #e1e1e1;" text="ADD" textFill="#7c7676">
+            <Button fx:id="addBtn" layoutX="574.0" layoutY="57.0" mnemonicParsing="false" onAction="#tagsEvent" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #e1e1e1;" text="ADD" textFill="#7c7676">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
             </Button>
          </children></Pane>
       <HBox layoutX="259.0" layoutY="350.0" spacing="40.0" />
-      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #e1e1e1;" text="BACK" textFill="#7c7676">
+      <Button fx:id="backBtn" layoutX="1252.0" layoutY="816.0" mnemonicParsing="false" onAction="#tagsEvent" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #e1e1e1;" text="BACK" textFill="#7c7676">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
