--- a/src/be/ac/ulb/infof307/g06/views/StatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/StatsView.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.StatsViewController">
    <children>
@@ -62,7 +63,7 @@
             </Button>
          </children>
       </HBox>
-      <Button fx:id="exportJSONBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1262.0" layoutY="766.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="51.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".json" textFill="WHITE">
+      <Button fx:id="exportJSONBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1205.0" layoutY="772.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="39.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".json" textFill="WHITE">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
@@ -75,11 +76,12 @@
             <TreeTableColumn fx:id="estimatedColumn" prefWidth="92.0" text="Estimated" />
          </columns>
       </TreeTableView>
-      <Button fx:id="exportCSVBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1172.0" layoutY="766.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="51.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".csv" textFill="WHITE">
+      <Button fx:id="exportCSVBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1101.0" layoutY="772.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#events" prefHeight="39.0" prefWidth="74.0" style="-fx-background-color: #4fc3f7;" text=".csv" textFill="WHITE">
          <font>
             <Font name="Calibri" size="18.0" />
          </font>
       </Button>
-      <TextField fx:id="fileNameTextField" alignment="CENTER" layoutX="1094.0" layoutY="734.0" prefHeight="26.0" prefWidth="290.0" promptText="Statistics (Filename by default) " />
+      <TextField fx:id="fileNameTextField" alignment="CENTER" layoutX="1038.0" layoutY="740.0" prefHeight="26.0" prefWidth="290.0" promptText="Statistics (Filename by default) " />
+      <Text fx:id="msgExportText" fill="#407a4b" layoutX="1038.0" layoutY="832.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="289.99999999999994" />
    </children>
 </AnchorPane>
