--- a/src/be/ac/ulb/infof307/g06/views/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/ProjectMenu.fxml
@@ -25,7 +25,7 @@
             </Button>
          </children>
       </HBox>
-      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#menuEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
