--- a/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import org.controlsfx.control.CheckComboBox?>
+<?import javafx.scene.shape.Line?>
 
+<?import javafx.scene.control.ComboBox?>
 
 <?import javafx.scene.layout.VBox?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
@@ -19,22 +21,43 @@
                 prefWidth="70.0" text="BACK"/>
         <HBox layoutX="23.0" layoutY="17.0" prefHeight="25.0" prefWidth="139.0" spacing="20.0">
             <children>
-                <Button fx:id="previousWeekBtn" mnemonicParsing="false" text="&lt;"/>
-                <Button fx:id="todayBtn" mnemonicParsing="false" text="today"/>
-                <Button fx:id="nextWeekBtn" mnemonicParsing="false" text="&gt;"/>
+                <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" text="&lt;"/>
+                <Button fx:id="todayBtn" mnemonicParsing="false" onAction="#calendarEvents" text="today"/>
+                <Button fx:id="nextWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" text="&gt;"/>
             </children>
         </HBox>
         <HBox layoutX="616.0" layoutY="17.0" prefHeight="25.0" prefWidth="120.0" spacing="20.0"/>
       <WeekDayHeaderView fx:id="weekDays" layoutX="-5.0" layoutY="99.0" prefHeight="29.0" prefWidth="1521.0" />
       <ScrollPane layoutY="128.0" prefHeight="738.0" prefWidth="1521.0">
-        <content>
-          <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="723.0" prefWidth="1519.0">
-               <children>
-                   <AllDayView fx:id="allDayViewID" layoutX="-2.0" prefHeight="29.0" prefWidth="1521.0"/>
-               </children>
-            </AnchorPane>
-        </content>
+          <content>
+              <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="723.0"
+                          prefWidth="1519.0">
+                  <children>
+                      <VBox layoutX="-2.0" prefHeight="723.0" prefWidth="1521.0" spacing="40">
+                          <children>
+                              <AllDayView fx:id="projects" minHeight="0.0" prefHeight="723" prefWidth="0.0"
+                                          rowHeight="50.0"/>
+                              <AllDayView fx:id="tasks" minHeight="0.0" prefHeight="723" prefWidth="0.0"
+                                          rowHeight="20.0"
+                                          disable="true"/>
+                          </children>
+                      </VBox>
+                      <Line endX="213.5" opacity="0.2" startX="213.5" startY="9.9999999999999E13"/>
+                      <Line endX="421.0" layoutX="10.0" layoutY="10.0" opacity="0.2" startX="421.0"
+                            startY="9.9999999999999E13"/>
+                      <Line endX="628.5" layoutX="20.0" layoutY="20.0" opacity="0.2" startX="628.5"
+                            startY="9.9999999999999E13"/>
+                      <Line endX="835.5" layoutX="30.0" layoutY="30.0" opacity="0.2" startX="835.5"
+                            startY="9.9999999999999E13"/>
+                      <Line endX="1042.5" layoutX="40.0" layoutY="40.0" opacity="0.2" startX="1042.5"
+                            startY="9.9999999999999E13"/>
+                      <Line endX="1250.0" layoutX="50.0" layoutY="50.0" opacity="0.2" startX="1250.0"
+                            startY="9.9999999999999E13"/>
+                  </children>
+              </AnchorPane>
+          </content>
       </ScrollPane>
-      <CheckComboBox fx:id="projectComboBox" layoutX="298.0" layoutY="16.0" prefHeight="25.0" prefWidth="118.0" />
-   </children>
+        <CheckComboBox fx:id="projectComboBox" layoutX="298.0" layoutY="16.0" prefHeight="25.0" prefWidth="160"/>
+        <ComboBox fx:id="colorsComboBox" layoutX="466.0" layoutY="17.0" prefWidth="150.0" onAction="#onColorSelected"/>
+    </children>
 </AnchorPane>
