--- a/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
@@ -3,61 +3,78 @@
 <?import com.calendarfx.view.AllDayView?>
 <?import com.calendarfx.view.WeekDayHeaderView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import org.controlsfx.control.CheckComboBox?>
-<?import javafx.scene.shape.Line?>
-
-<?import javafx.scene.control.ComboBox?>
-
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.CheckComboBox?>
+
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="916.0" prefWidth="1528.0" xmlns="http://javafx.com/javafx/15.0.1"
+            minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.calendarViews.CalendarViewController">
     <children>
-        <Button fx:id="backBtn" layoutX="1423.0" layoutY="873.0" mnemonicParsing="false" prefHeight="37.0"
-                onAction="#calendarEvents"
-                prefWidth="70.0" text="BACK"/>
-        <HBox layoutX="23.0" layoutY="17.0" prefHeight="25.0" prefWidth="139.0" spacing="20.0">
+        <ComboBox fx:id="colorsComboBox" layoutX="632.0" layoutY="27.0" onAction="#onColorSelected" prefWidth="150.0"/>
+        <Button fx:id="backBtn" layoutX="1387.0" layoutY="846.0" mnemonicParsing="false" onAction="#calendarEvents"
+                prefHeight="40.0" prefWidth="88.0" style="-fx-background-color: #4BBAEB;" text="BACK"/>
+        <HBox layoutX="20.0" layoutY="19.0" prefHeight="40.0" prefWidth="187.0" spacing="20.0">
             <children>
-                <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" text="&lt;"/>
-                <Button fx:id="todayBtn" mnemonicParsing="false" onAction="#calendarEvents" text="today"/>
-                <Button fx:id="nextWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" text="&gt;"/>
+                <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
+                        prefWidth="45.0" text="&lt;"/>
+                <Button fx:id="todayBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
+                        prefWidth="63.0" text="today"/>
+                <Button fx:id="nextWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
+                        prefWidth="45.0" text="&gt;"/>
             </children>
         </HBox>
-        <HBox layoutX="616.0" layoutY="17.0" prefHeight="25.0" prefWidth="120.0" spacing="20.0"/>
-      <WeekDayHeaderView fx:id="weekDays" layoutX="-5.0" layoutY="99.0" prefHeight="29.0" prefWidth="1521.0" />
-      <ScrollPane layoutY="128.0" prefHeight="738.0" prefWidth="1521.0">
-          <content>
-              <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="723.0"
-                          prefWidth="1519.0">
-                  <children>
-                      <VBox layoutX="-2.0" prefHeight="723.0" prefWidth="1521.0" spacing="40">
-                          <children>
-                              <AllDayView fx:id="projects" minHeight="0.0" prefHeight="723" prefWidth="0.0"
-                                          rowHeight="50.0"/>
-                              <AllDayView fx:id="tasks" minHeight="0.0" prefHeight="723" prefWidth="0.0"
-                                          rowHeight="20.0"
-                                          disable="true"/>
-                          </children>
-                      </VBox>
-                      <Line endX="213.5" opacity="0.2" startX="213.5" startY="9.9999999999999E13"/>
-                      <Line endX="421.0" layoutX="10.0" layoutY="10.0" opacity="0.2" startX="421.0"
-                            startY="9.9999999999999E13"/>
-                      <Line endX="628.5" layoutX="20.0" layoutY="20.0" opacity="0.2" startX="628.5"
-                            startY="9.9999999999999E13"/>
-                      <Line endX="835.5" layoutX="30.0" layoutY="30.0" opacity="0.2" startX="835.5"
-                            startY="9.9999999999999E13"/>
-                      <Line endX="1042.5" layoutX="40.0" layoutY="40.0" opacity="0.2" startX="1042.5"
-                            startY="9.9999999999999E13"/>
-                      <Line endX="1250.0" layoutX="50.0" layoutY="50.0" opacity="0.2" startX="1250.0"
-                            startY="9.9999999999999E13"/>
-                  </children>
-              </AnchorPane>
-          </content>
-      </ScrollPane>
-        <CheckComboBox fx:id="projectComboBox" layoutX="298.0" layoutY="16.0" prefHeight="25.0" prefWidth="160"/>
-        <ComboBox fx:id="colorsComboBox" layoutX="466.0" layoutY="17.0" prefWidth="150.0" onAction="#onColorSelected"/>
+        <WeekDayHeaderView fx:id="weekDays" layoutY="82.0" prefHeight="29.0" prefWidth="1500.0"/>
+        <ScrollPane layoutY="128.0" prefHeight="710.0" prefWidth="1500.0">
+            <content>
+                <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="710.0"
+                            prefWidth="1485.0">
+                    <children>
+                        <VBox layoutX="-2.0" prefHeight="710.0" prefWidth="1500.0" spacing="40">
+                            <children>
+                                <AllDayView fx:id="projects" minHeight="0.0" prefHeight="723" prefWidth="0.0"
+                                            rowHeight="50.0"/>
+                                <AllDayView fx:id="tasks" disable="true" minHeight="0.0" prefHeight="29.0"
+                                            prefWidth="1485.0" rowHeight="20.0"/>
+                            </children>
+                        </VBox>
+                        <Line endX="210.5" opacity="0.2" startX="210.5" startY="9.9999999999999E13"/>
+                        <Line endX="415.0" layoutX="10.0" layoutY="10.0" opacity="0.2" startX="415.0"
+                              startY="9.9999999999999E13"/>
+                        <Line endX="619.5" layoutX="20.0" layoutY="20.0" opacity="0.2" startX="619.5"
+                              startY="9.9999999999999E13"/>
+                        <Line endX="823.75" layoutX="30.0" layoutY="30.0" opacity="0.2" startX="823.75"
+                              startY="9.9999999999999E13"/>
+                        <Line endX="1027.75" layoutX="40.0" layoutY="40.0" opacity="0.2" startX="1027.75"
+                              startY="9.9999999999999E13"/>
+                        <Line endX="1232.15" layoutX="50.0" layoutY="50.0" opacity="0.2" startX="1232.15"
+                              startY="9.9999999999999E13"/>
+                    </children>
+                </AnchorPane>
+            </content>
+        </ScrollPane>
+        <CheckComboBox fx:id="projectComboBox" layoutX="374.0" layoutY="27.0" prefHeight="25.0" prefWidth="160"/>
+        <Label fx:id="monthLabel" alignment="CENTER_RIGHT" layoutX="1094.0" layoutY="-4.0" prefHeight="93.0"
+               prefWidth="381.0" text="December  2021">
+            <font>
+                <Font size="48.0"/>
+            </font>
+        </Label>
+        <Label layoutX="254.0" layoutY="29.0" prefHeight="20.0" prefWidth="120.0" text="Projects to show:">
+            <font>
+                <Font size="14.0"/>
+            </font>
+        </Label>
+        <Label layoutX="580.0" layoutY="29.0" text="Colors:">
+            <font>
+                <Font size="14.0"/>
+            </font>
+        </Label>
     </children>
 </AnchorPane>
