--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
@@ -8,18 +8,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1500.0" styleClass="gradient-background" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.statisticsViews.StatsViewController">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.statisticsViews.StatsViewController">
    <children>
-      <Button fx:id="backToProjectMenu" layoutX="1364.0" layoutY="820.0" minWidth="53.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="56.0" prefWidth="110.0" style="-fx-background-color: #6BC5EC;" text="BACK" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="1254.0" layoutY="820.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" styleClass="container" stylesheets="@styles.css" text="BACK" textFill="WHITE">
          <font>
-            <Font name="Cambria Bold" size="18.0" />
+            <Font name="Calibri" size="24.0" />
          </font>
       </Button>
       <VBox layoutX="548.0" layoutY="107.0" prefHeight="704.0" prefWidth="283.0" spacing="51.0">
@@ -127,13 +130,30 @@
             </Button>
          </children>
       </Pane>
-      <Line endX="1394.0" layoutX="104.0" layoutY="96.0" startX="-100.0" stroke="WHITE" />
-      <Label layoutX="33.0" layoutY="16.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow" stylesheets="@styles.css" text="Statistics ">
+      <Line endX="1394.0" layoutX="104.0" layoutY="78.0" startX="-100.0" stroke="WHITE" />
+      <Polygon fill="#4ec8f50d" layoutX="-158.0" layoutY="383.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE">
+         <effect>
+            <Bloom />
+         </effect>
+      </Polygon>
+      <Polygon fill="#4ec8f50d" layoutX="-197.0" layoutY="383.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="359.0" points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-163.0" layoutY="323.0" points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="-30.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0" stroke="TRANSPARENT" strokeType="INSIDE">
+         <effect>
+            <Bloom />
+         </effect>
+      </Polygon>
+      <Polygon fill="#4ec8f50d" layoutX="-195.0" layoutY="-47.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-204.0" layoutY="-30.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-161.0" layoutY="-37.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
+      <Label layoutX="33.0" layoutY="3.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow" stylesheets="@styles.css" text="Statistics " textFill="WHITE">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label layoutX="44.0" layoutY="69.0" prefHeight="17.0" prefWidth="151.0" styleClass="shadow" stylesheets="@styles.css" text="Overall view">
+      <Label layoutX="44.0" layoutY="59.0" prefHeight="17.0" prefWidth="151.0" styleClass="shadow" stylesheets="@styles.css" text="Overall view" textFill="WHITE">
          <font>
             <Font name="DejaVu Sans Condensed Bold" size="12.0" />
          </font>
