--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.shape.Polygon?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1"
+            minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/16"
             fx:controller="be.ac.ulb.infof307.g06.views.mainMenuViews.MenuViewController">
    <children>
       <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
@@ -21,19 +19,30 @@
                <font>
                   <Font size="36.0"/>
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND"/>
+               </cursor>
             </Button>
             <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#events" prefHeight="201.0"
                     prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
                <font>
-                  <Font size="36.0" />
+                  <Font size="36.0"/>
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND"/>
+               </cursor>
             </Button>
          </children>
       </HBox>
-      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events" prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events"
+              prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
          <font>
-            <Font name="Calibri" size="24.0" />
-         </font></Button>
+            <Font name="Calibri" size="24.0"/>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND"/>
+         </cursor>
+      </Button>
       <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="384.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE">
          <effect>
             <Bloom />
@@ -47,14 +56,25 @@
             <Bloom />
          </effect>
       </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-194.0" layoutY="-46.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
-      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Projects" wrappingWidth="504.9830722808838">
+      <Polygon fill="#4ec8f50d" layoutX="-194.0" layoutY="-46.0"
+               points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0"
+               points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0"
+               points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE"
+                 width="1500.0"/>
+      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0"
+            text="Projects" wrappingWidth="504.9830722808838">
          <font>
-            <Font name="Calibri" size="48.0" />
+            <Font name="Calibri" size="48.0"/>
          </font>
       </Text>
    </children>
+   <cursor>
+      <Cursor fx:constant="DEFAULT"/>
+   </cursor>
 </AnchorPane>
