--- a/src/be/ac/ulb/infof307/g06/views/projectViews/ProjectsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/ProjectsView.fxml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?scenebuilder-stylesheet ProjectsView.css?>
-<?import java.net.URL?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+
+<?import javafx.scene.control.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.CheckComboBox?>
-
+<?import java.net.URL?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0"
             prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="be.ac.ulb.infof307.g06.views.projectViews.ProjectsViewController">
@@ -162,4 +151,7 @@
       <Button fx:id="addBtn" layoutY="850.0" mnemonicParsing="false" onAction="#events" prefHeight="48.0"
               prefWidth="322.0" style="-fx-background-color: #4fc3f7;" text="ADD"/>
    </children>
+   <cursor>
+      <Cursor fx:constant="DEFAULT"/>
+   </cursor>
 </AnchorPane>
